--- a/config.yml
+++ b/config.yml
@@ -67,6 +67,12 @@ compute_notebooks:
         adf_path: ./ADF
         config_path: .
         config_fil_str: "config_f.cam6_3_119.FLTHIST_ne30.r328_gamma0.33_soae_numcin3.001_vs_f.cam6_3_119.FLTHIST_ne30.r328_gamma0.33_soae.001.yaml"
+  
+  surface:
+    kernel_name: mom6-tools-nbscuid
+    parameter_groups:
+      none:
+        sname: *sname
 
 
   
@@ -92,12 +98,15 @@ book_toc:
     # Parts group notebooks into different sections in the Jupyter book
     ### table of contents, so you can organize different parts of your project.
 
-    - caption: ADF Quick Run
+    - caption: Atmosphere
 
       # Each chapter is the name of one of the notebooks that you executed
       ### in compute_notebooks above, also without .ipynb
       chapters:
         - file: adf_quick_run
+    - caption: Ocean
+      chapters:
+          - file: surface
 
 
 #####################################
