Updated case used in ADF and MOM6 diagnostic run

--- a/nblibrary/config_f.cam6_3_119.FLTHIST_ne30.r328_gamma0.33_soae.001.yaml
+++ b/nblibrary/config_f.cam6_3_119.FLTHIST_ne30.r328_gamma0.33_soae.001.yaml
@@ -51,10 +51,12 @@
 #
 ##==============================
 
-diag_loc: /glade/scratch/richling/adf-output/f.cam6_3_119.FLTHIST_ne30.r328_gamma0.33_soae_numcin3.001_vs_f.cam6_3_119.FLTHIST_ne30.r328_gamma0.33_soae.001/
+user: eromashkova
 
-climo_loc: /glade/scratch/richling/adf-output/ADF-data/climos/
-ts_loc: /glade/scratch/richling/adf-output/ADF-data/timeseries/
+diag_loc: /glade/scratch/${user}/adf-output/${diag_cam_climo.cam_case_name}/
+
+climo_loc: /glade/campaign/cesm/development/cross-wg/diagnostic_framework/CESM_output_for_testing/
+ts_loc: /glade/campaign/cesm/development/cross-wg/diagnostic_framework/CESM_output_for_testing/
 
 #This first set of variables specify basic info used by all diagnostic runs:
 diag_basic_info:
@@ -132,25 +134,25 @@ diag_cam_climo:
     cam_overwrite_climo: false
 
     #Name of CAM case (or CAM run name):
-    cam_case_name: f.cam6_3_119.FLTHIST_ne30.r328_gamma0.33_soae_numcin3.001
+    cam_case_name: b.e23_alpha16b.BLT1850.ne30_t232.054
 
     #Location of CAM history (h0) files:
-    cam_hist_loc: /glade/derecho/scratch/hannay/archive/${diag_cam_climo.cam_case_name}/atm/hist/
+    cam_hist_loc: /glade/campaign/cesm/development/cross-wg/diagnostic_framework/CESM_output_for_testing/${diag_cam_climo.cam_case_name}/atm/hist/
 
     yrs: ${diag_cam_climo.start_year}-${diag_cam_climo.end_year}
 
     #Location of CAM climatologies: 
-    cam_climo_loc: ${climo_loc}${diag_cam_climo.cam_case_name}/${diag_cam_climo.yrs}/
+    cam_climo_loc: ${climo_loc}${diag_cam_climo.cam_case_name}/atm/proc/${diag_cam_climo.yrs}/
 
     #model year when time series files should start:
     #Note:  Leaving this entry blank will make time series
     #       start at earliest available year.
-    start_year: 1995
+    start_year: 91
 
     #model year when time series files should end:
     #Note:  Leaving this entry blank will make time series
     #       end at latest available year.
-    end_year: 2005
+    end_year: 101
 
     #Do time series files need to be generated?
     #If True, then diagnostics assumes that model files are already time series.
@@ -197,7 +199,7 @@ diag_cam_baseline_climo:
     
 
     #Location of baseline CAM climatologies:
-    cam_climo_loc: ${climo_loc}${diag_cam_baseline_climo.cam_case_name}/${diag_cam_baseline_climo.yrs}/
+    cam_climo_loc: /glade/scratch/richling/adf-output/ADF-data/climos/${diag_cam_baseline_climo.cam_case_name}/${diag_cam_baseline_climo.yrs}/
 
     #model year when time series files should start:
     #Note:  Leaving this entry blank will make time series
@@ -224,7 +226,7 @@ diag_cam_baseline_climo:
     cam_overwrite_ts: false
 
     #Location where time series files are (or will be) stored:
-    cam_ts_loc: ${ts_loc}${diag_cam_baseline_climo.cam_case_name}/${diag_cam_baseline_climo.yrs}/
+    cam_ts_loc: /glade/scratch/richling/adf-output/ADF-data/timeseries/${diag_cam_baseline_climo.cam_case_name}/${diag_cam_baseline_climo.yrs}/
 
     case_nickname: ${diag_cam_baseline_climo.cam_case_name} 
 
@@ -358,7 +360,7 @@ tem_info:
     #Location where TEM files are stored:
     #If path not specified or commented out, skip TEM calculation
     #If no path, diagnostics wont run even if declared in averaging/plotting scripts below
-    tem_loc: /glade/scratch/richling/adf-output/ADF-data/TEM/
+    tem_loc: /glade/campaign/cesm/development/cross-wg/diagnostic_framework/ADF-data/TEM/
 
     #TEM history file number
     hist_num: h4
